@@ -1,2 +1,7 @@
 #!/bin/sh
-exec egrep -n $* [a-z]*/*.[hcyl] conf/*/*.[hc] Makefile.am [a-z]*/Makefile.am
+exec egrep -n $* \
+    [a-z]*/*.[hcyl] \
+    conf/*/*.[hc] \
+    Makefile.am \
+    [a-z]*/Makefile.am \
+    aux/macros/*.m4
