@@ -6,10 +6,8 @@ AC_CACHE_CHECK(if external definition for sys_errlist[] exists,
 ac_cv_extern_sys_errlist,
 [
 # try to locate pattern in header files
-changequote(<<, >>)dnl
 #pattern="(extern)?.*char.*sys_errlist.*\[\]"
 pattern="(extern)?.*char.*sys_errlist.*"
-changequote([, ])dnl
 AC_EGREP_CPP(${pattern},
 [
 #ifdef HAVE_STDIO_H
